修改产品安装手册